css/obBase.css
/* ... */
#ov1  .textSize17px {
  font-size: 17px;
}

#ov1  .textSize20px {
  font-size: 20px;
}

#ov1  .textSize24px {
  font-size: 24px;
}

#ov1  .textSize13px {
  font-size: 13px;
}

#ov1  .textFirstCharUppercase {
  text-transform: lowercase;
}

#ov1  .textFirstCharUppercase::first-letter {
  text-transform: uppercase;
}

#ov1  .textWeightLight {
  font-weight: 100;
}

#ov1  .textWeightNormal {
  font-weight: 400;
}

#ov1  .textWeightMedium {
  font-weight: 500;
}

#ov1 .fontSize13 {
  font-size: 13px;
}

#ov1 .fontSize14 {
  font-size: 14px;
}

#ov1 .fontSize15 {
  font-size: 15px;
}

#ov1 .fontSize16 {
  font-size: 16px;
}

#ov1 .fontSize20 {
  font-size: 20px;
}

#ov1 .txt-darkest {
  color: #000;
}

#ov1  .alignCenter {
  text-align: center;
}

#ov1  .floatLeft {
  float: left;
}

#ov1  .floatRight {
  float: right;
}

#ov1  .right10 {
  right: 10px;
}

#ov1  .marginRight5 {
  margin-right: 5px;
}


#ov1  .marginLeft6 {
  margin-left: 6px;
}

#ov1  .marginLeft10 {
  margin-left: 10px;
}

#ov1  .marginLeft88 {
  margin-left: 88px;
}

#ov1  .marginTop2 {
  margin-top: 2px;
}

#ov1  .marginTop15 {
  margin-top: 15px;
}

#ov1  .marginTop20 {
  margin-top: 20px;
}

#ov1  .marginTop50 {
  margin-top: 50px;
}

#ov1  .marginBottom2 {
  margin-bottom: 2px;
}

#ov1  .marginBottom50 {
  margin-bottom: 50px;
}

#ov1  .margin0 {
  margin: 0;
}

#ov1  .marginAuto {
  margin: auto;
}

#ov1  .minHeight650 {
  min-height: 650px;
}

#ov1  .lineHeightReset{
  line-height: normal;
}

#ov1  .padding0 {
  padding: 0;
}

#ov1 .bottom0 {
  bottom: 0;
}

.positionAbsolute {
  position: absolute;
}

.positionRelative {
  position: relative;
}


#ov1  .padding5 {
  padding: 5px;
}

#ov1  .padding10 {
  padding: 10px;
}

#ov1  .padding15 {
  padding: 15px;
}

#ov1  .padding20 {
  padding: 20px;
}

#ov1  .padding2015 {
  padding: 20px 15px;
}

#ov1  .padding17px {
  padding: 17px;
}

#ov1  .paddingLeft15 {
  padding-left: 15px;
}

#ov1  .width100 {
  width: 100%;
}

#ov1 .width600 {
  width: 600px;
}

#ov1  .cursorDefault {
  cursor: default;
}

#ov1  .borderBottomLeftRaidus3 {
  border-bottom-left-radius: 3px !important;
}

#ov1  .borderBottomRightRaidus3 {
  border-bottom-right-radius: 3px !important;
}

